# binaries-backup

./: README.md
el6-64/yat4tango-1.10.4/include/: Makefile.am  TangoTest.h  attrdesc.h  attribute.h  auto_tango_monitor.h  cbthread.h  coutappender.h  coutbuf.h  devapi.h  device.h  device_2.h  deviceclass.h  dserver.h  encoded_attribute.h  encoded_format.h  eventconsumer.h  except.h  lockthread.h  multiattribute.h  omniconfig.h  omnithread.h  pollring.h  seqvec.h  subdev_diag.h  tango.h  tango_const.h  tangorollingfileappender.h
el6-64/yat4tango-1.10.4/include/COS/: COS_sysdep.h
el6-64/yat4tango-1.10.4/include/omniORB4/: BiDirPolicy.h  CORBA.h  CORBA_Any.h  CORBA_BOA.h  CORBA_Context.h  CORBA_DomainManager.h  CORBA_Environment.h  CORBA_Exception.h  CORBA_ExceptionList.h  CORBA_LocalObject_vartypes.h  CORBA_NamedValue.h  CORBA_ORB.h  CORBA_Object_vartypes.h  CORBA_ServerRequest.h  CORBA_TypeCode_member.h  CORBA_ValueBase.h  CORBA_ValueBase_vartypes.h  CORBA_primitive_types.h  CORBA_sysdep.h  CORBA_sysdep_trad.h  CORBA_vartypes.h  GIOP.h  IOP.h  IOP_S.h  acconfig.h  boa.h  callHandle.h  codeSets.h  distdate.hh  giopEndpoint.h  linkHacks.h  omniAsyncInvoker.h  omniConnectionMgmt.h  omniInterceptors.h  omniORB.h  omniORBcompat.h  omniPolicy.h  omniTransport.h  optionalFeatures.h  poa_defs.h  (+14 more)
el6-64/yat4tango-1.10.4/include/omnithread/: nt.h  posix.h
el6-64/yat4tango-1.10.4/include/yat4tango/: AttributeGroup.h  CommonHeader.h  DevicePlugIn.h  DevicePlugInHelper.h  DeviceProxyHelper.h  DeviceTask.h  DeviceTask.i  DynamicAttribute.h  DynamicAttributeManager.h  Export.h  (+19 more)
(+478 files in other folders)
