nobase_include_HEADERS =  \
	yat4tango/AttributeGroup.h \
	yat4tango/CommonHeader.h \
	yat4tango/DeviceInfo.h \
	yat4tango/DevicePlugIn.h \
	yat4tango/DevicePlugInHelper.h \
	yat4tango/DeviceProxyHelper.h \
	yat4tango/DeviceTask.h \
	yat4tango/DeviceTask.i \
	yat4tango/DynamicAttribute.h \
	yat4tango/DynamicAttributeManager.h \
	yat4tango/DynamicCommand.h \
	yat4tango/DynamicCommandManager.h \
	yat4tango/DynamicInterfaceManager.h \
	yat4tango/ExceptionHelper.h \
	yat4tango/Export.h \
	yat4tango/InnerAppender.h \
	yat4tango/LogHelper.h \
	yat4tango/MonitoredAttribute.h \
	yat4tango/MonitoredDevice.h \
	yat4tango/MonitoredDeviceTask.h \
	yat4tango/PropertyHelper.h \
	yat4tango/PropertyHelper.hpp \
	yat4tango/ThreadSafeDeviceProxy.h \
	yat4tango/ThreadSafeDeviceProxy.i \
	yat4tango/ThreadSafeDeviceProxyHelper.h \
	yat4tango/Types.h \
	yat4tango/UndefDebugStream.h \
	yat4tango/YatLogAdapter.h







